turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:21: error: expected start of definition
override def run() {
         ^HouseTree:31: error: Unmatched closing brace '}' ignored here
}
^